# tinker_server

./: .env  Cargo.toml  README.md  diesel.toml  services.yaml
assets/: setup.sql
migrations/2025-02-24-180125_create_movements/: down.sql  up.sql
migrations/2025-02-24-194459_create_players/: down.sql  up.sql
migrations/2025-02-27-155445_create_account/: down.sql  up.sql
migrations/2025-02-27-162851_change_player_name/: down.sql  up.sql
migrations/2025-02-27-163049_add_account_fk/: down.sql  up.sql
migrations/2025-02-27-170907_add_abilities/: down.sql  up.sql
migrations/2025-02-27-171014_add_items/: up.sql
migrations/2025-02-27-171051_add_join_character_abilities/: down.sql  up.sql
migrations/2025-02-27-171408_add_join_character_items/: down.sql  up.sql
migrations/2025-03-02-214855_add_unique_username/: down.sql  up.sql
migrations/2025-03-04-143306_add_character_position/: down.sql  up.sql
migrations/2025-03-07-105549_add_character_modified/: down.sql  up.sql
src/: activity.rs  errors.rs  main.rs  payloads.rs  queries.rs  routes.rs  schema.rs  utilities.rs
src/data/: messages.rs  mod.rs  models.rs  payloads.rs
src/routes/: mod.rs  models.rs  report.rs
