[package]
name = "tinker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["clock", "now"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
serde = { version = "1.0.218", features = ["derive"] }
time = "0.3.37"
