[package]
name = "tinker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-jwt-auth-middleware = "0.5.0"
actix-test = "0.1.5"
actix-web = "4.9.0"
actix-ws = "0.3.0"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["clock", "now"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
ed25519-compact = "2.1.1"
futures-util = "0.3.31"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
r2d2 = "0.8.10"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
time = "0.3.37"
validator = { version = "0.20.0", features = ["derive"] }
