[package]
name = "tinker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.9.0"
actix-jwt-auth-middleware = "0.5.0"
actix-test = "0.1.5"
actix-web = "4.9.0"
actix-ws = "0.3.0"
argon2 = "0.5.3"
branca = "0.10.1"
chrono = { version = "0.4.39", features = ["clock", "now", "serde"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
getrandom = "0.3.1"
kd-tree = "0.6.0"
once_cell = "1.20.3"
r2d2 = "0.8.10"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["sync"] }
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
